src/styles/search.css
.DocSearch-Button {
  @apply flex max-w-full shrink-0 grow basis-[230px] items-center overflow-x-auto rounded border border-gray-new-90 bg-white bg-[url('/images/search-light.svg')] bg-[left_0.625rem_center] bg-no-repeat p-[7px] pl-9 text-left leading-none text-gray-new-70 outline-none transition-colors duration-200 hover:cursor-pointer hover:border-gray-new-70 hover:shadow-none dark:border-gray-new-30 dark:bg-black-new dark:bg-[url('/images/search-dark.svg')] dark:text-gray-new-50 dark:hover:border-gray-new-50 md:m-0;
  @apply lg:items-start lg:border-none lg:bg-[top] lg:p-0;

  .DocSearch-Search-Icon {
    @apply hidden;
  }

  .DocSearch-Button-Placeholder {
    @apply text-sm font-normal lg:hidden;
  }

  .DocSearch-Button-Keys {
    @apply ml-auto flex h-5 min-w-[33px] items-center justify-center gap-x-1 rounded-sm border border-gray-new-80 bg-gray-new-98 py-1 text-gray-new-30 dark:border-gray-new-30 dark:bg-gray-new-10 dark:text-gray-new-80 lg:h-5 lg:w-10 lg:border-none lg:bg-transparent;

    .DocSearch-Button-Key {
      @apply relative top-0 m-0 flex items-center justify-center text-[10px] font-medium leading-none shadow-none first:text-xs first:font-semibold first:leading-none lg:hidden;

      svg {
        @apply h-3.5 w-auto text-gray-new-30 dark:text-gray-new-80;
      }
    }
  }
}

.DocSearch-Container {
  @apply fixed top-0 left-0 z-[200] h-screen w-screen min-w-[320px] bg-[rgba(12,13,13,0.2)] dark:bg-[rgba(12,13,13,0.8)] lg:p-4;

  .DocSearch-Modal {
    @apply relative mx-auto mt-40 mb-auto max-w-[564px] flex-col rounded-[10px] border border-gray-new-90 bg-white dark:border-gray-new-20 dark:bg-gray-new-8;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
  }

  .DocSearch-SearchBar {
    @apply flex border-b border-gray-new-90 px-2 py-2 dark:border-gray-new-20;
  }

  .DocSearch-Footer {
    @apply relative z-[300] flex h-11 w-full shrink-0 select-none flex-row-reverse items-center justify-between rounded-b-lg border-t border-gray-new-90 bg-none py-0 px-5 shadow-none dark:border-gray-new-20 md:px-4;

    .DocSearch-Commands {
      @apply flex items-center space-x-3 lg:hidden;

      li {
        @apply flex items-center;
      }

      .DocSearch-Commands-Key {
        @apply mr-1 rounded-[20px] border-none bg-gray-new-94 px-[3px] py-px text-gray-new-50 dark:bg-gray-new-20 dark:text-gray-new-60;
      }

      .DocSearch-Label {
        @apply ml-1.5;
      }
    }
  }

  .DocSearch-Cancel {
    display: none;
  }

  .DocSearch-Form {
    @apply relative m-0 flex h-10 w-full items-center rounded py-0 pl-3 pr-2 shadow-none md:pl-2 md:pr-1;
  }

  .DocSearch-MagnifierLabel {
    @apply h-4 w-4 bg-[url('/images/search-light.svg')] bg-center bg-no-repeat dark:bg-[url('/images/search-dark.svg')];
    .DocSearch-Search-Icon {
      @apply hidden;
    }
  }

  .DocSearch-MagnifierLabel,
  .DocSearch-Reset {
    @apply text-sm leading-none text-gray-new-60 dark:text-gray-new-50;

    svg {
      @apply h-6 w-6;
    }
  }

  .DocSearch-LoadingIndicator,
  .DocSearch-Reset[hidden] {
    display: none;
  }

  .DocSearch-Input {
    @apply h-full w-4/5 grow appearance-none border-none bg-transparent p-0 pl-2 text-base font-normal leading-none text-black-new outline-none dark:text-white dark:placeholder:text-gray-new-50;

    &::-webkit-search-decoration,
    &::-webkit-search-cancel-button,
    &::-webkit-search-results-button,
    &::-webkit-search-results-decoration {
      -webkit-appearance: none;
    }
  }

  .DocSearch-Reset {
    @apply cursor-pointer appearance-none rounded-[50%] border-none bg-none;
    stroke-width: 1.4;
    animation: fade-in 0.1s ease-in forwards;
  }

  .DocSearch-ErrorScreen,
  .DocSearch-NoResults,
  .DocSearch-StartScreen {
    @apply mx-auto my-0 px-5 py-12 text-lg;
  }

  .DocSearch-Screen-Icon {
    @apply hidden;
  }

  .DocSearch-Title {
    @apply text-center leading-none text-gray-new-70 dark:text-gray-new-50;

    strong {
      @apply font-normal text-black-new dark:text-gray-new-90;
    }
  }

  .DocSearch-NoResults-Prefill-List {
    @apply mt-12;

    ul {
      @apply mt-4 space-y-2.5;
    }

    .DocSearch-Help {
      @apply text-sm font-semibold leading-none text-gray-new-30 dark:text-gray-new-90;
    }

    .DocSearch-Prefill {
      @apply relative w-full rounded border border-gray-new-94 py-[15px] px-3 text-left text-sm font-medium leading-none text-black-new transition-colors duration-200 hover:bg-gray-new-98 dark:border-gray-new-20 dark:text-white dark:hover:bg-gray-new-15;

      &:hover {
        &::after {
          @apply opacity-100;
        }
      }

      &::after {
        @apply absolute top-1/2 right-3 h-4 w-4 -translate-y-1/2 bg-secondary-8 opacity-0 transition-opacity duration-200 content-[''] dark:bg-green-45;
        -webkit-mask-image: url('/images/chevron.svg');
        mask-image: url('/images/chevron.svg');
        mask-size: 6px 12px;
        mask-repeat: no-repeat;
        mask-position: center;
      }
    }
  }

  .DocSearch-StartScreen {
    .DocSearch-Help {
      @apply text-center text-lg leading-none text-gray-new-30 dark:text-gray-new-50;
    }
  }

  .DocSearch-Logo a {
    @apply flex items-center;
  }

  .DocSearch-Logo svg {
    @apply ml-2;

    path,
    rect {
      @apply dark:fill-white;
    }
  }

  .DocSearch-Label {
    @apply text-sm leading-none text-gray-new-60;
  }

  .DocSearch-Hits {
    @apply p-5 md:px-4;

    .DocSearch-Hit-source {
      @apply text-sm font-semibold leading-none text-gray-new-30 dark:text-gray-new-90;
    }

    > ul {
      @apply mt-2.5 space-y-2.5;
    }

    .DocSearch-Hit {
      @apply border-none;

      a {
        @apply flex rounded border border-gray-new-94 px-3 py-4 text-black-new transition-colors duration-200 hover:bg-gray-new-98 dark:border-gray-new-20 dark:text-white dark:hover:bg-gray-new-15;

        &:hover {
          .DocSearch-Hit-action::after {
            @apply opacity-100;
          }
        }
      }

      &.DocSearch-Hit--Child {
        .DocSearch-Hit--Result {
          @apply relative ml-5;

          &::before {
            @apply absolute top-1/2 -left-3.5 h-[calc(100%+25px)] w-px -translate-y-1/2 bg-gray-new-94 content-[''] dark:bg-gray-new-20;
          }

          &.DocSearch-Hit--FirstChild {
            &::before {
              @apply top-0 h-full translate-y-0;
            }
          }

          &.DocSearch-Hit--LastChild {
            &::before {
              @apply bottom-0 top-auto h-full translate-y-0;
            }
          }
        }
      }

      .DocSearch-Hit--Result {
        .DocSearch-Hit-action {
          @apply h-4 w-4 bg-secondary-8 opacity-0 transition-opacity duration-200 dark:bg-green-45;
          -webkit-mask-image: url('/images/chevron.svg');
          mask-image: url('/images/chevron.svg');
          mask-size: 6px 12px;
          mask-repeat: no-repeat;
          mask-position: center;

          .DocSearch-Hit-Select-Icon {
            @apply hidden;
          }
        }
      }

      &[aria-selected='true'] {
        a {
          @apply bg-gray-new-98 dark:bg-gray-new-15;
        }

        .DocSearch-Hit--Result {
          .DocSearch-Hit-action {
            @apply opacity-100;
          }
        }
      }

      .DocSearch-Hit-Container {
        @apply flex w-full items-start space-x-3;

        .DocSearch-Hit-content-wrapper {
          @apply !mr-2 flex grow flex-col space-y-1.5;
        }

        .DocSearch-Hit-icon {
          @apply !ml-0 text-gray-new-70 dark:text-gray-new-60;

          svg {
            @apply h-4 w-4;
          }
        }

        .DocSearch-Hit-Tree {
          @apply hidden;
        }

        .DocSearch-Hit-title {
          @apply text-sm font-medium leading-tight;

          mark {
            @apply bg-transparent text-secondary-8 dark:text-green-45;
          }
        }

        .DocSearch-Hit-path {
          @apply text-xs leading-none text-black-new dark:text-white;

          mark {
            @apply bg-transparent text-secondary-8 dark:text-green-45;
          }
        }

        .DocSearch-Hit-action {
          @apply text-gray-new-70 dark:text-gray-new-60;

          .DocSearch-Hit-action-button {
            svg {
              @apply h-4 w-4 transition-colors duration-200;
            }
            &:hover {
              svg {
                @apply text-secondary-8 dark:text-green-45;
              }
            }
          }
        }
      }
    }
  }
}

